--- a/.github/workflows/prepare_release.yaml
+++ b/.github/workflows/prepare_release.yaml
@@ -25,7 +25,22 @@ on:
         value: ${{ jobs.prepare-release.outputs.release_branch }}
 
 jobs:
+  validate-source-branch:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Validate source branch
+        run: |
+          if [[ "${{ github.event.inputs.release_type }}" != "patch" && "${{ github.ref }}" != "refs/heads/main" ]]; then
+            echo "Error: Can only create major/minor release from the main branch"
+            exit 1
+          elif [[ "${{ github.event.inputs.release_type }}" == "patch" && ("${{ github.ref }}" != refs/heads/release/* || "${{ github.ref }}" != refs/tags/*)]]; then
+            echo "Error: Can only create patch release from a release branch or an existing tag"
+            exit 1
+          fi
+
   bump-version:
+    needs: validate-source-branch
+    if: success()
     runs-on: ubuntu-latest
     outputs:
       new_version: ${{ steps.increment-version.outputs.new_version }}
