Update condition for rollback-job

--- a/.github/workflows/deploy_to_prod.yaml
+++ b/.github/workflows/deploy_to_prod.yaml
@@ -35,7 +35,9 @@ jobs:
 
   rollback-job:
     needs: [deploy-job]
-    if: ${{ failure() && !skipped() }}
+    if: |
+      always() &&
+      needs.deploy-job.result == 'success'
     uses: ./.github/workflows/deploy_to_env.yaml
     with:
       env: 'prod'
