Fix patch branch condition

--- a/.github/workflows/deploy_to_env.yaml
+++ b/.github/workflows/deploy_to_env.yaml
@@ -185,5 +185,5 @@ jobs:
         run: |
           git push origin --delete $RELEASE_BRANCH
 
-      - name: Fail job
-        run: exit 1
+#      - name: Fail job
+#        run: exit 1
